[package]
name = "tabler-dominator"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
dominator = { version = "0.5.34", default-features = false }
lazy_static = "1.4.0"
quote = "1.0.33"
